--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Titlesection{
+  background-color: rgb(32, 142, 179);
+  width: 100%;
+  height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Titlesection input{
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  border: 1px solid cyan;
+  font-size: 18px;
+  padding-left: 10px;
+}
+.Titlesection button{
+  width: 180px;
+  height: 60px;
+  margin: 20px;
+  border-radius: 10px;
+  font-size: 18px;
+  padding-left: 10px;
+  border: none;
+  color: white;
+  background-color: blue;
+}
+.Titlesection button:hover{
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card{
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  margin: auto;
+  background-color: rgb(163, 235, 241);
+  color: rgb(124, 18, 18);
+}
+
+.card h3{
+  margin: 5px;
+}
+.card h1{
+  margin-bottom: 0px;
+}
+.card img{
+  
+  width: 250px;
+  margin: 0px;
+}
+
+.container1{
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
 }
